adjusts illustration height to be max-height to avoid squishing on smaller width containers

--- a/app/assets/stylesheets/nfg_ui/network_for_good/admin/nfg_theme/custom/_illustration.scss
+++ b/app/assets/stylesheets/nfg_ui/network_for_good/admin/nfg_theme/custom/_illustration.scss
@@ -1,6 +1,7 @@
 .illustration {
   max-width: 100%;
-  height: ($spacer * 6);
+  height: auto;
+  max-height: ($spacer * 6);
 }
-.illustration-sm { height: ($spacer * 4); }
-.illustration-lg { height: ($spacer * 10); }
+.illustration-sm { max-height: ($spacer * 4); }
+.illustration-lg { max-height: ($spacer * 10); }
